# tellar

./: README.md  pyproject.toml  test
.github/workflows/: test.yml
tellar/: __init__.py  agent.py  cache.py  character.py  cli.py  prompt.py  searchable_document.py  vectordb.py
tellar/api/: discovery.py  model.py  server.py
tellar/server/: client.py  discovery.py  model.py  server.py
tellar/utils/: network_utils.py
tests/: character_test.py  cli_test.py  searchable_document_test.py
tests/server/: discovery_test.py  model_test.py  server_test.py
