[tool.poetry]
name = "tellar"
version = "0.2.0"
description = ""
authors = ["Gilles Grousset <gilles.grousset@insideapp.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.12"
colorama = "^0.4.6"
click = "^8.1.4"
gptcache = "^0.1.35"
pyfiglet = "^1.0.2"
urllib3 = "2.2.2"
openai = "^1.38.0"
pypdf = "^4.3.1"
tiktoken = "^0.7.0"
faiss-cpu = "^1.7.4"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.20"

[tool.poetry.scripts]
tellar = "tellar.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
