[tool.poetry]
name = "tellar"
version = "0.2.0"
description = ""
authors = ["Gilles Grousset <gilles.grousset@insideapp.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.12"
colorama = "^0.4.6"
click = "^8.1.4"
gptcache = "^0.1.44"
pyfiglet = "^1.0.2"
urllib3 = "2.2.2"
openai = "^1.40.0"
pypdf = "^4.3.1"
tiktoken = "^0.7.0"
faiss-cpu = "^1.7.4"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.20"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
requests = "^2.32.3"
websockets = "^12.0"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
tellar = "tellar.cli:cli"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"

[tool.pytest.ini_options]
addopts = "--cov=tellar --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
